# ai-trade-main

./: .env.example  README.md  ingest_bourse_pdf.py  migrate_db.py  pyproject.toml
frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: AuthBadge.tsx  EventTimeline.tsx  HistoryTable.tsx  MetricCard.tsx  OpportunityBoard.tsx  OrderReviewCard.tsx  PriceTickerStrip.tsx  RequestComposer.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  auth.tsx  tokenStorage.ts  types.ts  utils.test.ts  utils.ts
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  SignalDetailPage.tsx
harness/: fixtures.py  graders.py  models.py  run_harness.py
harness/scenarios/: forced_buy_bias_refused.json  high_risk_human_review.json  single_symbol_conservative.json  universe_scan_weekly.json
tests/: test_alpaca.py  test_api.py  test_bourse_fetcher.py  test_clients.py  test_coordinator.py  test_database.py  test_harness.py  test_intent.py  test_llm_agents.py  test_market_mode.py  test_mcp.py  test_migrations.py  test_policy.py  test_rag.py
trading_agents/: __init__.py
trading_agents/api/: deps.py  main.py
trading_agents/api/routes/: auth.py  (+2 more)
trading_agents/core/: __init__.py  config.py  database.py  llm.py  migrations.py  models.py  services.py  storage.py
trading_agents/graph/: build.py  coordinator_node.py  enforce_limits.py  helpers.py  risk_node.py  sentiment_node.py  state.py  technical_node.py
(+18 files in other folders)
