[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morocco-trading-agents"
version = "0.1.0"
description = "LangGraph-inspired Morocco trading signal system with intent parsing and Alpaca order previews."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.28.0",
  "feedparser>=6.0.11",
  "python-dateutil>=2.9.0",
  "pdfplumber>=0.11.0",
  "tenacity>=9.0.0",
  "sse-starlette>=2.1.3",
]

[project.scripts]
morocco-trading-migrate = "trading_agents.core.migrations:cli_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]
integrations = [
  "langgraph>=0.2.50",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "langchain-core>=0.3.0",
  "langsmith>=0.1.140",
  "chromadb>=0.5.5",
  "sentence-transformers>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["trading_agents*"]
